@@ -1,4 +1,5 @@
 0.2.5:
+  - Added postal code targeting examples.
   - Require google-ads-common 0.5.3 or later from now on.
 
 0.2.4:
